--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,10 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
+        java-version: '22'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
