--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: [ "master", "develop", "*" ]
   pull_request:
-    branches: [ "master", "develop" ]
+    branches: [ "master", "develop" , "*"]
 
 jobs:
   build:
