--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: ./bin/generate.sh
+      run: mvn clean install
     - name: pwd
       run: pwd
     - name: list generated files
