--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,9 +25,10 @@ jobs:
       run: ls -la ./target/generated-sources/openapi/src/gen
     - name: copy generated files
       run: cp -r ./target/generated-sources/openapi/src/gen/* ./src
-    - name: Commit changes
+    - name: Commit and push changes
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         git add .
         git commit -m "update generated files"
+        git push
