--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,4 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git add .
         git commit -m "update generated files"
-        git push origin/${{ steps.extract_branch.outputs.branch }}
+        git push
