--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,12 +23,12 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-    - name: copy generated files
+    - name: Copy generated files
       run: cp -r ./target/generated-sources/openapi/src/gen/* ./src
     - name: Commit and push changes
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        git add .
-        git commit -m "update generated files"
+        git add ./src/gen/*
+        git commit -m "Update generated files"
         git push
