--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,8 @@ jobs:
       run: mvn clean install
     - name: Copy generated files
       run: cp -r ./target/generated-sources/openapi/src/gen/* ./src
+    - name: List copied files
+      run: ls ./src/gen
     - name: Commit and push changes
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
