--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
     - name: Copy generated files
-      run: cp -r ./target/generated-sources/openapi/src/gen/* ./src
+      run: cp -r ./target/generated-sources/openapi/src/gen/* ./src/gen
     - name: List copied files
       run: ls ./src/gen
     - name: Commit and push changes
