--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
                         <configuration>
                             <library>resttemplate</library>
                             <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
+                            <output>${project.basedir}/src/main/java/uni/testbench/gen</output>
                             <generatorName>java</generatorName>
                             <configOptions>
                                 <sourceFolder>src/gen/java/main</sourceFolder>
