--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,9 @@
                             <library>resttemplate</library>
                             <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
                             <output>${project.basedir}/src/main/java/uni/testbench/gen</output>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
                             <generatorName>java</generatorName>
-                            <configOptions>
-                                <sourceFolder>src/gen/java/main</sourceFolder>
-                            </configOptions>
                         </configuration>
                     </execution>
                 </executions>
