--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.4</version>
+            <version>4.13.2</version>
         </dependency>
-
     </dependencies>
     <build>
         <plugins>
@@ -76,7 +75,7 @@
                         <configuration>
                             <library>resttemplate</library>
                             <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
-                            <output>${project.basedir}/src/main/java/uni/testbench/gen</output>
+                            <output>${project.basedir}/gen</output>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <generatorName>java</generatorName>
@@ -86,4 +85,11 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 </project>
