--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,12 +23,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
-    - name: List copied files
-      run: ls ./src/main/java/uni/testbench/gen
     - name: Commit and push changes
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        git add ./src/main/java/uni/testbench/gen/*
+        git add ./gen/*
         git commit -m "Update generated files"
         git push
