--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,6 +5,11 @@ on:
     branches: [ "master", "develop", "*" ]
   pull_request:
     branches: [ "master", "develop" , "*"]
+  workflow_dispatch:
+    inputs:
+      generatorInputSpec:
+        description: 'OpenAPI document to generate code from'
+        required: true
 
 jobs:
   build:
@@ -21,6 +26,8 @@ jobs:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
+    - name: Override OpenAPI generator input
+      run: echo "generatorInputSpec=${{ github.event.inputs.generatorInputSpec }}" >> $GITHUB_ENV
     - name: Build with Maven
       run: mvn clean install
     - name: Commit and push changes
