Enable configurable generator input

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Final Exam Work</description>
     <properties>
         <java.version>22</java.version>
-        <project.basedir>.</project.basedir>
+        <generator.inputfile>./src/main/resources/openapi.yaml</generator.inputfile>
     </properties>
     <dependencies>
         <dependency>
@@ -74,8 +74,8 @@
                         </goals>
                         <configuration>
                             <library>resttemplate</library>
-                            <inputSpec>${project.basedir}/src/main/resources/api.yaml</inputSpec>
-                            <output>${project.basedir}/gen</output>
+                            <inputSpec>${generator.inputfile}</inputSpec>
+                            <output>./gen</output>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <generatorName>java</generatorName>
