--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Override OpenAPI generator input
-      run: echo "generatorInputSpec=${{ github.event.inputs.generatorInputSpec }}" >> $GITHUB_ENV
+      run: |
+        ./bin/override-generator-input.sh
     - name: Build with Maven
       run: mvn clean install
     - name: Commit and push changes
