--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Override OpenAPI generator input
+      shell: bash
       run: |
         ./bin/override-generator-input.sh
     - name: Build with Maven
