--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Override OpenAPI generator input
       shell: bash
       run: |
+        chmod +x ./bin/override-generator-input.sh
         ./bin/override-generator-input.sh
     - name: Build with Maven
       run: mvn clean install
