--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ on:
         required: true
 
 jobs:
-  build:
+  Run-OpenAPI-Generator:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -30,7 +30,7 @@ jobs:
       shell: bash
       run: |
         chmod +x ./bin/override-generator-input.sh
-        ./bin/override-generator-input.sh
+        ./bin/override-generator-input.sh ${{ github.event.inputs.generatorInputSpec }}"
     - name: Build with Maven
       run: mvn clean install
     - name: Commit and push changes
