--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,10 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Extract branch name
-      shell: bash
-      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-      id: extract_branch
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
@@ -30,7 +26,7 @@ jobs:
       shell: bash
       run: |
         chmod +x ./bin/override-generator-input.sh
-        ./bin/override-generator-input.sh ${{ github.event.inputs.generatorInputSpec }}"
+        ./bin/override-generator-input.sh ${{ github.event.inputs.generatorInputSpec }}
     - name: Build with Maven
       run: mvn clean install
     - name: Commit and push changes
