--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Final Exam Work</description>
     <properties>
         <java.version>22</java.version>
-        <generator.inputfile>./src/main/resources/openapi.yaml</generator.inputfile>
+        <generator.inputfile>./src/main/resources/api.yaml</generator.inputfile>
     </properties>
     <dependencies>
         <dependency>
