--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: Mudlet/xmlstarlet-action@master
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
