--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,8 @@ jobs:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
+    - name: Clean up generated files
+      run: rm -rf ./gen/*
     - name: Build with Maven
       run: |
         chmod +x ./bin/override-generator-input.sh
