--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,13 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Clean up generated files
-      run: rm -rf ./gen/*
+      run: |
+        rm -rf ./gen/*
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+        git add ./gen/*
+        git commit -m "Clean generated files"
+        git push
     - name: Build with Maven
       run: |
         chmod +x ./bin/override-generator-input.sh
