--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Final Exam Work</description>
     <properties>
         <java.version>22</java.version>
-        <generator.inputfile>./src/main/resources/api.yaml</generator.inputfile>
+        <generator_inputfile>./src/main/resources/api.yaml</generator_inputfile>
     </properties>
     <dependencies>
         <dependency>
@@ -74,7 +74,7 @@
                         </goals>
                         <configuration>
                             <library>resttemplate</library>
-                            <inputSpec>${generator.inputfile}</inputSpec>
+                            <inputSpec>${generator_inputfile}</inputSpec>
                             <output>./gen</output>
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
