--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,14 +25,27 @@ jobs:
     - name: Clean up generated files
       run: |
         rm -rf ./gen/*
-    - name: Build with Maven
-      run: |
-        chmod +x ./bin/override-generator-input.sh
-        ./bin/override-generator-input.sh ${{ github.event.inputs.generatorInputSpec }}
-    - name: Commit and push changes
+    #- name: Build with Maven
+    #  run: |
+    #    chmod +x ./bin/override-generator-input.sh
+    #    ./bin/override-generator-input.sh ${{ github.event.inputs.generatorInputSpec }}
+    - name: Iterate over files in directory
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        git add ./gen/*
-        git commit -m "Update generated files"
-        git push
+        for file in ./src/main/resources/*.yaml; do
+          branch_name=$(basename $file .yaml)
+          git checkout -b $branch_name
+          chmod +x ./bin/override-generator-input.sh
+          ./bin/override-generator-input.sh $file
+          git add ./gen/*
+          git commit -m "Update generated files for $branch_name"
+          git push origin $branch_name
+          done
+    #- name: Commit and push changes
+    #  run: |
+    #    git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    #    git config --global user.name "github-actions[bot]"
+    #    git add ./gen/*
+    #    git commit -m "Update generated files"
+    #    git push
