Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
           branch_name=$(basename $file .yaml)
           git checkout -b $branch_name
           chmod +x ./bin/override-generator-input.sh
-          ./bin/override-generator-input.sh $file
+          ./bin/override-generator-input.sh $basename.yaml
           git add ./gen/*
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
