Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,9 +35,10 @@ jobs:
         git config --global user.name "github-actions[bot]"
         for file in ./src/main/resources/*.yaml; do
           branch_name=$(basename $file .yaml)
+          echo $branch_name
           git checkout -b $branch_name
           chmod +x ./bin/override-generator-input.sh
-          ./bin/override-generator-input.sh $basename.yaml
+          ./bin/override-generator-input.sh $branch_name
           git add ./gen/*
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
