Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,7 +38,7 @@ jobs:
           echo $branch_name
           git checkout -b $branch_name
           chmod +x ./bin/override-generator-input.sh
-          ./bin/override-generator-input.sh $branch_name
+          ./bin/override-generator-input.sh $branch_name.yaml
           git add ./gen/*
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
