Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,9 +22,9 @@ jobs:
         java-version: '22'
         distribution: 'temurin'
         cache: maven
-    - name: Clean up generated files
-      run: |
-        rm -rf ./gen/*
+    #- name: Clean up generated files
+    #  run: |
+    #    rm -rf ./gen/*
     #- name: Build with Maven
     #  run: |
     #    chmod +x ./bin/override-generator-input.sh
@@ -34,6 +34,7 @@ jobs:
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         for file in ./src/main/resources/*.yaml; do
+          rm -rf ./gen/*
           branch_name=$(basename $file .yaml)
           echo $branch_name
           git checkout -b $branch_name
