--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,16 +33,18 @@ jobs:
       run: |
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
+        chmod +x ./bin/override-generator-input.sh
         for file in ./src/main/resources/*.yaml; do
           rm -rf ./gen/*
           branch_name=$(basename $file .yaml)
           echo $branch_name
           git checkout -b $branch_name
-          chmod +x ./bin/override-generator-input.sh
           ./bin/override-generator-input.sh $branch_name.yaml
-          git add ./gen/*
-          git commit -m "Update generated files for $branch_name"
-          git push origin $branch_name
+          if [ $? -ne 0 ]; then
+            git add ./gen/*
+            git commit -m "Update generated files for $branch_name"
+            git push origin $branch_name
+          fi
         done
     #- name: Commit and push changes
     #  run: |
