--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
                             <generateApiTests>false</generateApiTests>
                             <generateModelTests>false</generateModelTests>
                             <generatorName>java</generatorName>
+                            <skipValidateSpec>true</skipValidateSpec>
                         </configuration>
                     </execution>
                 </executions>
