--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
                             <generateModelTests>false</generateModelTests>
                             <generatorName>java</generatorName>
                             <skipValidateSpec>true</skipValidateSpec>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
                         </configuration>
                     </execution>
                 </executions>
