Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,6 +43,7 @@ jobs:
           git add ./gen/*
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
+          GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name"
         done
     #- name: Commit and push changes
