--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,9 +43,10 @@ jobs:
           git add ./gen/*
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
-          GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name"
         done
+      env:
+        GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
     #- name: Commit and push changes
     #  run: |
     #    git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
