Automatically generate code for all the yamls

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,9 @@ on:
         description: 'OpenAPI document to generate code from'
         required: true
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   Run-OpenAPI-Generator:
     runs-on: ubuntu-latest
