Update api resource location

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
         chmod +x ./bin/override-generator-input.sh
-        for file in ./src/main/resources/*.yaml; do
+        for file in ./src/main/resources/docs/*.yaml; do
           rm -rf ./gen/*
           branch_name=$(basename $file .yaml)
           echo $branch_name
