--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Final Exam Work</description>
     <properties>
         <java.version>22</java.version>
-        <generator_inputfile>./src/main/resources/api.yaml</generator_inputfile>
+        <generator_inputfile>./src/main/resources/docs/api.yaml</generator_inputfile>
     </properties>
     <dependencies>
         <dependency>
