--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
                             <library>resttemplate</library>
                             <inputSpec>${generator_inputfile}</inputSpec>
                             <output>./gen</output>
-                            <generateApiTests>false</generateApiTests>
-                            <generateModelTests>false</generateModelTests>
+                            <generateApiTests>true</generateApiTests>
+                            <generateModelTests>true</generateModelTests>
                             <generatorName>java</generatorName>
                             <skipValidateSpec>true</skipValidateSpec>
                         </configuration>
