Integrate code_extractor.sh with github action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,9 +47,9 @@ jobs:
         git config --global user.name "github-actions[bot]"
         chmod +x ./bin/code_extractor.sh
         for AI_AGENT in ./src/main/resources/docs/generated/*; do
-          for file in $AI_AGENT/*.txt; do
+          for file in ./src/main/resources/docs/generated/$AI_AGENT/*.txt; do
             rm -rf ./gen/*
-            branch_name=$AI_AGENT_$(basename $file .txt)
+            branch_name="${AI_AGENT}_$(basename $file .txt)"
             echo $branch_name
             git checkout -b $branch_name
             ./bin/code_extractor.sh $file
