Integrate code_extractor.sh with github action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,8 @@ jobs:
         git config --global user.name "github-actions[bot]"
         chmod +x ./bin/override-generator-input.sh
         for file in ./src/main/resources/docs/*.yaml; do
-          rm -rf ./gen/*
+          rm -rf ./gen
+          mkdir -p ./gen
           branch_name=$(basename $file .yaml)
           echo $branch_name
           git checkout -b $branch_name
@@ -48,7 +49,8 @@ jobs:
         chmod +x ./bin/code_extractor.sh
         for AI_AGENT in ./src/main/resources/docs/generated/*; do
           for file in $AI_AGENT/*.txt; do
-            rm -rf ./gen/*
+            rm -rf ./gen
+            mkdir -p ./gen
             branch_name="$(basename ${AI_AGENT})_$(basename $file .txt)"
             echo $branch_name
             git checkout -b $branch_name
