add all unversioned changes to vcs in ci

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
           echo $branch_name
           git checkout -b $branch_name
           ./bin/override-generator-input.sh $branch_name.yaml
-          git add ./gen/*
+          git add ./
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
           gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name" --body "This PR updates the generated files for $branch_name"
@@ -55,7 +55,7 @@ jobs:
 #            echo $branch_name
 #            git checkout -b $branch_name
 #            ./bin/code_extractor.sh $file
-#            git add ./gen/*
+#            git add ./
 #            git commit -m "Update generated files for $branch_name"
 #            git push origin $branch_name
 #            gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name" --body "This PR updates the generated files for $branch_name"
