Clean up after commit

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,6 +41,7 @@ jobs:
           git commit -m "Update generated files for $branch_name"
           git push origin $branch_name
           gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name" --body "This PR updates the generated files for $branch_name"
+          git reset
         done
 #    - name: Extract code form AI generated output
 #      run: |
@@ -59,5 +60,6 @@ jobs:
 #            git commit -m "Update generated files for $branch_name"
 #            git push origin $branch_name
 #            gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name" --body "This PR updates the generated files for $branch_name"
+#            git reset
 #          done
 #        done
