Remove branch switching

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,8 +40,8 @@ jobs:
           branch_name=$(basename $file .yaml)
           echo "Processing $branch_name"
           
-          # Create a new branch based on the initial branch (e.g., develop)
-          git checkout -b $branch_name $initial_branch
+          # Create a new branch based on the initial branch without switching to it
+          git branch $branch_name $initial_branch
           
           # Run the OpenAPI generator script
           ./bin/override-generator-input.sh $branch_name.yaml
