--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,7 @@ jobs:
             branch_name=$(basename $file .yaml)
             echo $branch_name
             git checkout -b $branch_name
+            git add ./
             rm -rf ./gen
             git commit -m "Cleanup generated files"
             git push origin $branch_name
