--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,11 +36,11 @@ jobs:
             git checkout -b $branch_name
             git add ./
             rm -rf ./gen
-            git commit -m "Cleanup generated files"
+            git commit -a -m "Cleanup generated files"
             git push origin $branch_name
             ./bin/override-generator-input.sh $branch_name.yaml
             git add ./
-            git commit -m "Update generated files for $branch_name"
+            git commit -a -m "Update generated files for $branch_name"
             git push origin $branch_name
             gh pr create --base develop --head $branch_name --title "Update generated files for $branch_name" --body "This PR updates the generated files for $branch_name"
           done
